# r-c-typing

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  add_test.sh  dune-project  r-c-typing.opam  setup-env.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
c-parser/: Boilerplate.ml  CST.ml  Parse.ml  dune  parser.c
config/: discover.ml
lib/: C_interface.ml  PAst.ml  ast.ml  cabs_printer.ml  call_graph.ml  const_eval.ml  defs.ml  dune  in_channel_ext.ml  in_channel_ext.mli  package.ml  parser.ml  parser_utils.ml  preprocessor.ml  prim_pp.ml  rBuilder.ml  runner.ml  type_order.ml  type_parser.ml  utils.ml  vec_pp.ml  vectors.ml
test/: dune  dune.inc  package_test.ml  parser_test.expected  parser_test.ml  test_r_c_typing.ml  typing_test.ml
test/cprogs/: arithmetic.expected  attributes.c  attributes.expected  block-scope.c  block-scope.expected  cast.c  cast.expected  const_fold.c  const_fold.expected  cpatterns.c  cpatterns.expected  enum.c  enum.expected  env.c  env.expected  error-vs-fail.c  error-vs-fail.expected  for.c  for.expected  global-fnptr.c  global-fnptr.expected  global-write.c  global-write.expected  globals-probe.c  globals-probe.expected  inherits.c  inherits.expected  list.c  list.expected  narrowing_comp.c  narrowing_comp.expected  pairlist.c  pairlist.expected  plus.c  plus.expected  pointer.c  pointer.expected  predef_macros.c  predef_macros.expected  preproc-define.c  (+31 more)
types/: base.ty  posix.ty  winapi.ty
