(library
 (name r_c_typing)
 (modules
  ast
  defs
  in_channel_ext
  parser_utils
  const_eval
  preprocessor
  parser
  PAst
  prim_pp
  vec_pp
  runner
  type_parser
  utils
  call_graph
  C_interface
  package)
 (libraries r-c-typing.c mlsem rstt rstt-repl unix)
 (inline_tests
  (deps
   (glob_files ../types/*.ty)))
 (preprocess
  (pps ppx_deriving.show ppx_inline_test))
 (instrumentation
  (backend bisect_ppx)))
