(test
 (name parser_test)
 (libraries r_c_typing))

(executable
 (name typing_test)
 (modules typing_test)
 (libraries r_c_typing))

(executable
 (name package_test)
 (modules package_test)
 (libraries r_c_typing))

(rule
 (alias runtest)
 (deps
  (source_tree packages/testpkg))
 (action
  (with-stdout-to
   testpkg.output
   (run %{exe:package_test.exe} packages/testpkg))))

(rule
 (alias runtest)
 (deps packages/testpkg.expected testpkg.output)
 (action
  (diff packages/testpkg.expected testpkg.output)))

(include dune.inc)
