(test
 (name parser_test)
 (libraries r_c_typing))

(executable
 (name typing_test)
 (modules typing_test)
 (libraries r_c_typing))

(executable
 (name package_test)
 (modules package_test)
 (libraries r_c_typing))

(rule
 (alias runtest)
 (deps
  (glob_files ../types/*.ty)
  (source_tree packages/testpkg))
 (action
  (with-stdout-to
   testpkg.output
   (run %{exe:package_test.exe} packages/testpkg))))

(rule
 (alias runtest)
 (deps packages/testpkg.expected testpkg.output)
 (action
  (diff packages/testpkg.expected testpkg.output)))

(rule
 (alias runtest)
 (deps
  (glob_files ../types/*.ty)
  (source_tree packages/dup-globals))
 (action
  (with-stdout-to
   dup-globals.output
   (run %{exe:package_test.exe} packages/dup-globals))))

(rule
 (alias runtest)
 (deps packages/dup-globals.expected dup-globals.output)
 (action
  (diff packages/dup-globals.expected dup-globals.output)))

(rule
 (alias runtest)
 (deps
  (glob_files ../types/*.ty)
  (source_tree packages/cross-file-struct))
 (action
  (with-stdout-to
   cross-file-struct.output
   (run %{exe:package_test.exe} packages/cross-file-struct))))

(rule
 (alias runtest)
 (deps packages/cross-file-struct.expected cross-file-struct.output)
 (action
  (diff packages/cross-file-struct.expected cross-file-struct.output)))

(include dune.inc)
